Fix inf. scrolling & dark mode, add 'scroll to top' button

--- a/src/components/SideButtons.css
+++ b/src/components/SideButtons.css
@@ -1,9 +1,12 @@
-#dark-mode-btn {
-    display: block;
+.side-btns {
     position: fixed;
     bottom: 0.4rem;
     right: 0.4rem;
     z-index: 99;
+}
+
+.side-btn {
+    display: block;
     border: none;
     outline: none;
     
@@ -12,9 +15,10 @@
     height: 2.5rem;
     width: 2.5rem;
     border-radius: 12px;
+    margin-top: 0.4rem;
     padding: 0px;
 }
 
-#dark-mode-btn > p {
+.side-btn > p {
     margin: auto;
 }
